# redteam-arena

./: .gitattributes  .gitignore  .redteamarena.example.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  compliance-report-07c60298.md  demo.cast  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
history/prompts/001-static-battle-mode/: 002-static-battle-mode-specification.spec.prompt.md  003-clarify-spec-no-ambiguities.spec.prompt.md  004-implementation-plan-design.plan.prompt.md  005-task-generation-static-battle.tasks.prompt.md  006-implement-static-battle-mode-mvp.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
history/prompts/general/: 001-npm-package-research-typescript-cli.general.prompt.md  002-write-unit-test-files-vitest.general.prompt.md  003-v001-launch-polish-all-files.general.prompt.md  004-github-repo-polish-launch-readiness.general.prompt.md  005-end-to-end-live-battle-test.general.prompt.md  007-dependabot-email-flood-broken-ci.general.prompt.md  008-audit-and-ai-security-landscape-research.general.prompt.md  009-compliance-retitle-validation-scope-disclosure.general.prompt.md  010-owasp-asi-mapping-and-provider-agnostic-release.general.prompt.md  011-readme-reposition-agentic-top-10.general.prompt.md  012-autofix-safety-sarif-scan-budget.general.prompt.md  013-release-006-and-clean-install-verification.general.prompt.md  014-session-memory-and-phr-backfill.general.prompt.md
redteam_arena/: __init__.py  cli.py  display.py  types.py
redteam_arena/agents/: __init__.py  agent.py  auditor_agent.py  blue_agent.py  claude_adapter.py  mock_provider.py  openai_adapter.py  provider.py  provider_registry.py  red_agent.py  response_parser.py
redteam_arena/core/: __init__.py  advanced_analysis.py  auto_fix.py  battle_engine.py  battle_store.py  benchmark.py  config.py  diff_reader.py  event_system.py  file_reader.py  finding_validator.py  plugin_system.py  team.py  watcher.py
redteam_arena/reports/: __init__.py  battle_report.py  compliance_reporter.py  html_reporter.py  pr_commenter.py  sarif_reporter.py  scope_notice.py
redteam_arena/scenarios/: __init__.py  scenario.py
redteam_arena/scenarios/builtin/: agent-goal-hijack.md  agentic-supply-chain.md  apt-advanced-persistent-threat.md  broken-access-control.md  cascading-failures.md  cmmc-dod-readiness.md  crypto-failures.md  data-poisoning.md  epcs-dea-compliance.md  excessive-agency.md  (+33 more)
redteam_arena/server/: __init__.py  api_server.py  dashboard.py
scripts/: gen_demo_cast.py
specs/001-static-battle-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli.ts  display.ts  index.ts  types.ts
src/agents/: agent.ts  blue-agent.ts  claude-adapter.ts  provider.ts  red-agent.ts  response-parser.ts
src/core/: battle-engine.ts  event-system.ts  file-reader.ts
src/reports/: battle-report.ts
src/scenarios/: scenario.ts
test_healthcare/: app.py
tests/integration/: battle-flow.test.ts  test_battle_flow.py
tests/unit/: battle-report.test.ts  event-system.test.ts  file-reader.test.ts  response-parser.test.ts  scenario.test.ts  test_auto_fix.py  test_battle_report.py  test_cli.py  test_compliance_reporter.py  test_event_system.py  test_file_reader.py  test_finding_validator.py  test_owasp_asi_coverage.py  test_provider_agnostic_models.py  test_response_parser.py  test_sarif_reporter.py  test_scan_budget.py  test_scan_scope.py  test_scenario.py
(+5 files in other folders)
